# HCMUT_FABLAB_GPS_TRACKER_V2

./: .gitignore  README.md
GPS_TRACKER_V2/: CMakeLists.txt
GPS_TRACKER_V2/components/adc_battery/: adc.c  adc.h
GPS_TRACKER_V2/components/arduino_own_configure/: CMakeLists.txt
GPS_TRACKER_V2/components/arduino_own_configure/Adafruit_BusIO/: library.properties
GPS_TRACKER_V2/components/arduino_own_configure/Adafruit_MPU6050/: Adafruit_MPU6050.cpp  Adafruit_MPU6050.h  CMakeLists.txt  library.properties
GPS_TRACKER_V2/components/arduino_own_configure/Adafruit_Unified_Sensor/: library.properties
GPS_TRACKER_V2/components/gps_library/: CMakeLists.txt  gps.c  gps.h
GPS_TRACKER_V2/components/main_library/: CMakeLists.txt  main.h
GPS_TRACKER_V2/components/mpu_process/: CMakeLists.txt  yaw.h
GPS_TRACKER_V2/components/my_timer/: my_timer.c  my_timer.h
GPS_TRACKER_V2/components/sim_a7680c/: CMakeLists.txt  sim_a7680c.c  sim_a7680c.h
GPS_TRACKER_V2/main/: CMakeLists.txt  main.cpp
GPS_Tracker_Altium/: GPS_Tracker.IntLib  GPS_Tracker.PrjPcb  GPS_Tracker_1.IntLib  GPS_Tracker_V1.LibPkg  PCB1.PcbDoc  PCB1.PcbLib  PcbLib1.PcbLib  PcbLib2.PcbLib  Schlib1.SchLib  Schlib2.SchLib  Sheet1.SchDoc
GPS_Tracker_Altium/GPS_Tracker1/: GPS_Tracker.SCHLIB  PCB11.PcbLib
GPS_Tracker_Altium/GPS_Tracker1/Project Outputs for GPS_Tracker/: GPS_Tracker.IntLib
GPS_Tracker_Altium/GPS_Tracker2/: GPS_Tracker.SCHLIB  PCB11.PcbLib
GPS_Tracker_Altium/Project Outputs for GPS_Tracker/: Design Rule Check - PCB1.drc  Design Rule Check - PCB1.html
GPS_Tracker_Altium/Project Outputs for GPS_Tracker_1/: GPS_Tracker_1.IntLib
GPS_Tracker_Altium/__Previews/: Sheet1.SchDocPreview
